k8s/namespace.yaml
# creating a namespace for this application 
apiVersion: v1
kind: Namespace
metadata:
  name: three-tier-app
  labels:
    name: three-tier-app
    environment: production
